# rubot

./: .agent.md  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.rm  Justfile  LICENSE  MIGRATION_TO_DOCLING.md  OPENROUTER_MOCKING_SUMMARY.md  README.md  README_EN.md  docker-compose.yml  preload_marker_models.py  pyproject.toml  requirements.txt  test_openrouter_mocking.sh
.claude/: settings.local.json
.github/workflows/: cleanup-images.yml  docker.yml  integration-real-api.yml  release.yml  tag-stable.yml  test.yml
docs/: PLAN.md  PRD.md  VIRTUALIZATION.md  VIRTUALIZATION_DE.md
examples/: 2025-07-17.json  basic_usage.py
prompts/: default.txt
rubot/: __init__.py  __main__.py  cache.py  cli.py  config.py  docling_converter.py  downloader.py  llm.py  logger.py  markdown_cache.py  marker.py  models.py  retry.py  utils.py
scripts/: install.sh
tests/: conftest.py  test_cache.py  test_cli.py  test_cli_helpers.py  test_config.py  test_docling_converter.py  test_downloader.py  test_fallback_model.py  test_integration.py  test_llm.py  test_logger.py  test_markdown_cache.py  test_marker.py  test_models.py  test_retry.py  test_simple.py  test_utils.py
